<resources>

    <string name="app_name">WishList</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_new_wish">NewWish</string>
    <string name="nome_produto">Nome do Produto</string>
    <string name="categoria">Categoria</string>
    <string name="local">Local</string>
    <string name="contato">Contato</string>
    <string name="btnPesquisar">Pesquisar</string>
    <string name="title_activity_list_wish">ListWish</string>

</resources>